--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,7 +5,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://svwh.dl.sourceforge.net/project/panotools/libpano13/libpano13-{{ version }}/libpano13-{{ version }}_rc2.tar.gz
+  url: https://phoenixnap.dl.sourceforge.net/project/panotools/libpano13/libpano13-{{ version }}/libpano13-{{ version }}_rc2.tar.gz
   sha256: 6c7184a8af080934252d55e63a0f83457e2b8d59b3b8bb9ad62a21dea82f16cd
   patches:
     # This patch does two things:
