--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,28 +7,23 @@ package:
 source:
   url: https://phoenixnap.dl.sourceforge.net/project/panotools/libpano13/libpano13-{{ version }}/libpano13-{{ version }}_rc2.tar.gz
   sha256: 6c7184a8af080934252d55e63a0f83457e2b8d59b3b8bb9ad62a21dea82f16cd
-  patches:
-    # This patch does two things:
-    #    - Doesn't use the flag -lm for searching for libpng on windows
-    #    - Doesn't use libgimp in reading the rc file.
-    #         I have no idea why I do'nt need to apply the second part of the
-    #         patch for linux and mac seeing as they don't have gimp installed
-    #         at compile time either.
-    - touchup_windows.patch  # [win]
 
 build:
-  skip: true   # [win]
   number: 0
   run_exports:
     - {{ pin_subpackage('libpano13', max_pin='x.x.x') }}
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
-    - autotools_clang_conda   # [win]
+    - {{ compiler('c') }}     # [win]
+    - {{ compiler('cxx') }}   # [win]
+    - {{ compiler('c') }}           # [not win]
+    - {{ compiler('cxx') }}         # [not win]
+    - cmake  # [win]
+    - ninja  # [win]
     - make                    # [not win]
   host:
+    - perl
     - libpng
     - jpeg
     - libtiff
@@ -41,7 +36,10 @@ test:
     - test -f ${PREFIX}/include/pano13/version.h   # [unix]
     - test -f ${PREFIX}/bin/panoinfo               # [unix]
     - test -f ${PREFIX}/lib/libpano13${SHLIB_EXT}  # [unix]
-    - panoinfo -help
+    - PTinfo -h
+    # Opens a GUI on Windows and waits for user to close it, exits with -1
+    # anyway :-|
+    - panoinfo -help  # [not win]
 
 about:
   home: http://panotools.sourceforge.net/
