--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -22,6 +22,8 @@ macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
+perl:
+- 5.26.2
 pin_run_as_build:
   jpeg:
     max_pin: x
@@ -29,6 +31,8 @@ pin_run_as_build:
     max_pin: x.x
   libtiff:
     max_pin: x
+  perl:
+    max_pin: x.x.x
   zlib:
     max_pin: x.x
 zlib:
